# RAG_evolution

./: .gitignore  1. generate_questions_and_ground_truth.py  2. answer_questions.py  3. RAG_Phoenix_logging.py  3. RAG_Phoenix_logging_1.py  3. RAG_Phoenix_logging_2.py  CLAUDE.md  RAG_Course_Structure.md  README.md  convert_to_pdf.py  main.py  pyproject.toml  read_from_chroma_db.py  read_from_faiss_db.py  z. Phoenix_LangChain_RAG.py  z. Phoenix_QA_demo.py  z.LangChain_RAGAS_Phoenix.py
.claude/: settings.local.json
.claude/agents/: edu-code-modernizer.md  notebook-to-script-converter.md
01_basic_rag/: 2. minimal_rag_wtih_chunking.py  README.md
03_document_loading/: README.md
05_rag_evaluation/: 1. RAGAS_Naive_RAG.py
06_GraphRAG/: 0_setup.py  1_generate_data.py  2_build_knowledge_graph.py  2_cvs_to_knowledge_graph.py  2_data_to_knowledge_graph.py  3_naive_rag_baseline.py  3_query_knowledge_graph.py  4_graph_rag_system.py  4_naive_rag_cv.py  5_compare_systems.py  CLAUDE.md  README.md  README_PDF_CV_APPROACH.md  SETUP_GUIDE.md  docker-compose.yml  end_session.sh  test_pdf_pipeline.py  test_queries.json
06_GraphRAG/results/: comparison_report.md  detailed_comparison_analysis.json  graph_rag_results.json  (+1 more)
chroma/: chroma.sqlite3
chroma_langchain_db/: chroma.sqlite3
datasets/: create_question_dataset.py  generate_ground_truth_answers.py  generate_multi-hop_questions.py  generate_questions_for_files.py  questions_dataset.csv  questions_with_answers.csv  scientists - one liners.txt  scientists - wiki links.txt
input/: reference.csv
results/: rag_results.csv
(+87 files in other folders)
