[project]
name = "RAG_primitves"
version = "0.1.0"
description = "A set of RAG primitives, for independend execution"
authors = ["Andrzej Wodecki <andrzej.wodecki@example.com>"]
dependencies = [
    "langchain==0.3.24",
    "langchain-community==0.3.22",
    "langchain-core==0.3.55",
    "langchain-text-splitters==0.3.8",
    "langchain-openai==0.3.11",
    "langchain-chroma==0.2.3",
    "unstructured>=0.17.2",
]
